Thu Dec 11 22:24:07 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/FileSystemStorage.cpp:

          Fixed a bug that was due to me mistakenly thinking that
          ACE_String_Base constructors worked like std::string.

Thu Dec 11 18:32:13 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/runtime/idl2jni_runtime.h:

          Added exception for condition where native thread is unable to attach
          to the JVM. Fixed void ** cast warning in GCC 4.1.x.

Thu Dec 11 18:18:09 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/FileSystemStorage.cpp:

          In the Win32-specific code, set errno when a directory-open
          operation fails.

Thu Dec 11 16:10:17 UTC 2008  Weiqi Gao  <gaow@ociweb.com>

        * java/jms/compat/test/org/opendds/jms/client/MessageConsumerImplTest.java:
        * java/jms/compat/test/org/opendds/jms/client/SessionImplTest.java:

          Fixed some functional tests.

Thu Dec 11 15:32:00 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/codegen/im_jni.cpp:
        * java/idl2jni/runtime/idl2jni_BaseJavaPeer.h:
        * java/idl2jni/runtime/idl2jni_runtime.h:
        * java/idl2jni/runtime/idl2jni_runtime.cpp:
        * java/idl2jni/runtime/idl2jni_runtime.mpc:
        * java/jms/src/org/opendds/jms/common/util/NativeLoader.java:

          Updated findClass to use the context class loader; JNIThreadAttacher
          also updates the current thread's context class loader on attach.

        * java/idl2jni/runtime/i2jrt/Runtime.java:
        * java/idl2jni/runtime/i2jrt_Runtime.cpp:

          Removed these files.

Thu Dec 11 00:58:14 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * DDS_release_notes.txt:

          Added release note about opendds_ir_ctl changes.

Thu Dec 11 00:46:26 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.mpc:

          Re-added imr_client dependency (required for static builds).
