@@ -5,7 +5,7 @@
     Example DCPSInfoRepoService configuration.
 
     This configuration will create a DCPSInfoRepo instance using the
-    SimpleTcp transport type which listens to ${jboss.bind.address}:6666.
+    SimpleTcp transport type which listens to iiop://:6666.
 
     Author:  Steven Stallion
     Version: $Revision$
@@ -19,7 +19,7 @@
         <attribute name="DCPSDebugLevel">10</attribute>
         <attribute name="ORBDebugLevel">10</attribute>
         <attribute name="ORBListenEndpoints">iiop://:6666</attribute>
-        <attribute name="ORBLogFile">${jboss.server.log.dir}/DDS.log</attribute>
+        <attribute name="ORBLogFile">${jboss.server.log.dir}/opendds-ir.log</attribute>
         <attribute name="TransportType">SimpleTcp</attribute>
         <attribute name="VerboseTransportLogging">true</attribute>
         <depends>jboss.jca:service=RARDeployment,name='opendds-jms-@VERSION@.rar'</depends>
